--- a/style.css
+++ b/style.css
@@ -13,5 +13,9 @@ nav {
 }
 main img {
     min-width: 100px;
-    max-width: 500px;
+    max-width: 1000px;
 } 
+
+main > div > p {
+    text-align: center;
+}
