--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ nav {
     text-align: center;
 }
 main img {
-    min-width: 100px;
-    max-width: 1000px;
+    width: 1000px;
 } 
 
 main > div > p {
